Fix - issue with light blurring through wall on scenes that are auto scaled

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -3599,7 +3599,7 @@ body .note-visibility-toggle-container {
     mix-blend-mode:lighten;
     opacity:1;
     background:#000;
-    filter: blur(3px);
+    filter: blur(calc(3px / var(--scene-scale-conversion)));;
 }
 .ruler-svg-text{
     fill: #000;
